--- a/28_gennaio_slicknav_solo_pagine_primo_livello/news.html
+++ b/28_gennaio_slicknav_solo_pagine_primo_livello/news.html
@@ -6,54 +6,50 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 
 <head>
-	<meta charset="utf-8">
-	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta charset="utf-8">
+		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Rite of Thalia</title>
-	<meta name="description" content="This is the Responsive Grid System, a quick, easy and flexible way to create a responsive web site.">
-	<meta name="keywords" content="responsive, grid, system, web design">
+		<title>Rite of Thalia</title>
 
-	<meta name="author" content="www.grahamrobertsonmiller.co.uk">
+		<meta name="description" content="Rite of Thalia, symphonic metal music!">
+		<meta name="keywords" content="Rite of Thalia, symphonic, symphonic metal, metal, rieti, music, music rieti, rieti music, rite, thalia, rite of, piano, guitar">
 
-	<meta http-equiv="cleartype" content="on">
+		<meta name="author" content="Alessandro Ranalli">
 
-	<link rel="shortcut icon" href="/favicon.ico">
+		<meta http-equiv="cleartype" content="on">
 
-	<!-- Responsive and mobile friendly stuff -->
-	<meta name="HandheldFriendly" content="True">
-	<meta name="MobileOptimized" content="320">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="shortcut icon" href="/favicon.ico">
 
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/html5reset.css" media="all">
-	<link rel="stylesheet" href="css/responsivegridsystem.css" media="all">
-	<link rel="stylesheet" href="css/col.css" media="all">
-	<link rel="stylesheet" href="css/8cols.css" media="all">
-	<link rel="stylesheet" href="css/7cols.css" media="all">
-	<link rel="stylesheet" href="css/slicknav.css" media="all">
-	<link rel="stylesheet" href="css/mystyle.css" media="all">
+		<!-- Responsive and mobile friendly stuff -->
+		<meta name="HandheldFriendly" content="True">
+		<meta name="MobileOptimized" content="320">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!-- Responsive Stylesheets -->
-	<!--<link rel="stylesheet" media="only screen and (max-width: 1024px) and (min-width: 769px)" href="/css/1024.css">
-	<link rel="stylesheet" media="only screen and (max-width: 768px) and (min-width: 481px)" href="/css/768.css">
-	<link rel="stylesheet" media="only screen and (max-width: 480px)" href="/css/480.css">-->
+		<!-- Stylesheets -->
+		<link rel="stylesheet" href="css/html5reset.css" media="all">
+		<link rel="stylesheet" href="css/responsivegridsystem.css" media="all">
+		<link rel="stylesheet" href="css/col.css" media="all">
+		<link rel="stylesheet" href="css/8cols.css" media="all">
+		<link rel="stylesheet" href="css/7cols.css" media="all">
+		<link rel="stylesheet" href="css/slicknav.css" media="all">
+		<link rel="stylesheet" href="css/mystyle.css" media="all">
 
-	<!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements and feature detects -->
-	<script src="js/modernizr-2.5.3-min.js"></script>
+		<!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements and feature detects -->
+		<script src="js/modernizr-2.5.3-min.js"></script>
 
-	<style type="text/css">
 
-	/*  THIS IS JUST TO GET THE GRID TO SHOW UP.  YOU DONT NEED THIS IN YOUR CODE */
+		<style type="text/css">
 
-	#maincontent .col {
-		background: #ccc;
-		
-	}
-	</style>
+		/*  THIS IS JUST TO GET THE GRID TO SHOW UP.  YOU DONT NEED THIS IN YOUR CODE */
+
+		#maincontent .col {
+			background: #ccc;
+			background: rgba(204, 204, 204, 0.85);
+
+		}
+		</style>
 </head>
-
-
 
 <body>
 <div id="wrapper">
@@ -229,9 +225,8 @@
 </div>
 	<!-- JavaScript at the bottom for fast page loading -->
 
-	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
+	
+	<script src="js/jquery-1.7.2.min.js"></script>
 	
 
 	<!--[if (lt IE 9) & (!IEMobile)]>
