--- a/1_febbraio_def/band.html
+++ b/1_febbraio_def/band.html
@@ -28,10 +28,7 @@
 
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="css/html5reset.css" media="all">
-		<link rel="stylesheet" href="css/responsivegridsystem.css" media="all">
-		<!--<link rel="stylesheet" href="css/col.css" media="all">
-		<link rel="stylesheet" href="css/8cols.css" media="all">
-		<link rel="stylesheet" href="css/12cols.css" media="all">-->
+		<link rel="stylesheet" href="css/rgs.min.css" media="all">
 		<link rel ="stylesheet" href ="css/griglia.css" media="all">
 		<link rel="stylesheet" href="css/slicknav.css" media="all">
 		<link rel="stylesheet" href="css/mystyle.css" media="all">
@@ -86,7 +83,7 @@
 				</div>
 				<div class ="social selettori_lingua">
 					<a id ="lingua_scelta" href="contatti.html">Ita</a>
-					<a href="contatti.html">Eng</a>
+					<a href="#">Eng</a>
 				</div>				
 			</div>
 			<!--fine social e selezione lingua-->
@@ -191,7 +188,7 @@ In commodo magna lorem. Nunc in nunc lectus. Curabitur id faucibus mi. Integer c
 
 
 	<!-- More Scripts-->
-	<script src="js/responsivegridsystem.js"></script>
+	
 	<script defer src="js/jquery.slicknav.min.js"></script>
 	<script defer src="js/slide.js"></script>
 
