--- a/1_febbraio_def/eventi.html
+++ b/1_febbraio_def/eventi.html
@@ -28,10 +28,7 @@
 
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="css/html5reset.css" media="all">
-		<link rel="stylesheet" href="css/responsivegridsystem.css" media="all">
-		<!--<link rel="stylesheet" href="css/col.css" media="all">
-		<link rel="stylesheet" href="css/8cols.css" media="all">
-		<link rel="stylesheet" href="css/7cols.css" media="all">-->
+		<link rel="stylesheet" href="css/rgs.min.css" media="all">
 		<link rel ="stylesheet" href ="css/griglia.css" media="all">
 		<link rel="stylesheet" href="css/slicknav.css" media="all">
 		<link rel="stylesheet" href="css/mystyle.css" media="all">
@@ -87,7 +84,7 @@
 				</div>
 				<div class ="social selettori_lingua">
 					<a id ="lingua_scelta" href="contatti.html">Ita</a>
-					<a href="contatti.html">Eng</a>
+					<a href="#">Eng</a>
 				</div>				
 			</div>
 			<!--fine social e selezione lingua-->
@@ -159,47 +156,7 @@
 					</div>
 					<!--Contenitore delle news-->
 					<div id ="contenitore_news">
-						<div class = "news">						
-							<p class="topic_title">Bonobo cafè</p>
-							<span class = "col span_2_of_8 time">
-								<em>24</em>
-								feb
-								2014
-							</span>
-							<p class="padding news">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
-							</p>
-						</div>
-
-						<div class ="separatore_news">
-						</div>
-
-						<div class = "news">						
-							<p class="topic_title">Circolo culturale "Ai pozzi"</p>
-							<span class = "col span_2_of_8 time">
-								<em>30</em>
-								mar
-								2014
-							</span>
-							<p class="padding news">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
-							</p>
-						</div>
-
-						<div class ="separatore_news">
-						</div>
 						
-						<div class = "news">						
-							<p class="topic_title">John silver winebar</p>
-							<span class = "col span_2_of_8 time">
-								<em>28</em>
-								giu 
-								2014
-							</span>
-							<p class="padding news">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
-							</p>
-						</div>
 					</div>
 					<!--fine contenitore delle news-->
 				</div>
@@ -229,8 +186,6 @@
 
 
 	<!-- More Scripts-->
-	<script src="js/responsivegridsystem.js"></script>
-	<script src="js/riduzione.js"></script>
 	<script src="js/navigazione_locale_eventi.js"></script>
 	<script defer src="js/jquery.slicknav.min.js"></script>
 	<script defer src="js/slide.js"></script>
