--- a/1_febbraio_def/galleria.html
+++ b/1_febbraio_def/galleria.html
@@ -28,11 +28,7 @@
 
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="css/html5reset.css" media="all">
-		<link rel="stylesheet" href="css/responsivegridsystem.css" media="all">
-		<!--<link rel="stylesheet" href="css/col.css" media="all">
-		<link rel="stylesheet" href="css/3cols.css" media="all">		
-		<link rel="stylesheet" href="css/7cols.css" media="all">
-		<link rel="stylesheet" href="css/8cols.css" media="all">-->
+		<link rel="stylesheet" href="css/rgs.min.css" media="all">
 		<link rel ="stylesheet" href ="css/griglia.css" media="all">
 		<link rel="stylesheet" href="css/slicknav.css" media="all">
 		<link rel="stylesheet" href="css/mystyle.css" media="all">
@@ -88,7 +84,7 @@
 				</div>
 				<div class ="social selettori_lingua">
 					<a id ="lingua_scelta" href="contatti.html">Ita</a>
-					<a href="contatti.html">Eng</a>
+					<a href="#">Eng</a>
 				</div>				
 			</div>
 			<!--fine social e selezione lingua-->
@@ -215,8 +211,7 @@
 
 
 	<!-- More Scripts-->
-	<script src="js/responsivegridsystem.js"></script>
-	<script src="js/riduzione.js"></script>
+	
 	<script defer src="js/jquery.slicknav.min.js"></script>
 	<script defer src="js/slide.js"></script>
 	<script defer src="js/naviga_galleria.js"></script>
